--- a/CoinViewTiki/Views/CoinListPage.xaml
+++ b/CoinViewTiki/Views/CoinListPage.xaml
@@ -2,7 +2,7 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:CoinViewTiki.Behaviors"
+             xmlns:local="clr-namespace:CoinViewTiki"
              xmlns:prism="http://prismlibrary.com"
              xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
@@ -10,11 +10,7 @@
              xmlns:sk="clr-namespace:Xamarin.Forms.Skeleton;assembly=Xamarin.Forms.Skeleton"
              ios:Page.UseSafeArea="false"
              x:Class="CoinViewTiki.CoinListPage">
-    <!-- <ContentPage.Padding> -->
-    <!--     <OnPlatform x:TypeArguments="Thickness"> -->
-    <!--         <On Platform="iOS" Value="0,30,0,0" /> -->
-    <!--     </OnPlatform> -->
-    <!-- </ContentPage.Padding> -->
+ 
     <ContentPage.Content>
         <StackLayout Padding="0">
             <StackLayout.Background>
