--- a/CoinViewTiki/Dialogs/AlertDialog.xaml
+++ b/CoinViewTiki/Dialogs/AlertDialog.xaml
@@ -5,6 +5,7 @@
              BackgroundColor="White"
              HasShadow="False"
              Margin="20,0,20,0"
+             CornerRadius="25"
              x:Class="CoinViewTiki.AlertDialog">
         <Frame.Background>
                 <LinearGradientBrush StartPoint="0,0"
@@ -17,7 +18,9 @@
         </Frame.Background>
     
         <StackLayout  VerticalOptions="CenterAndExpand"
-                      HorizontalOptions="CenterAndExpand">
+                      HorizontalOptions="CenterAndExpand"
+                      Padding="20,5"
+                      Spacing="10">
                 
                 <Label  Style="{StaticResource listNameStyle}"
                         Text="{Binding Title}"
@@ -26,11 +29,13 @@
                         FontSize="30"/>
             <Label  Style="{StaticResource listDetailStyle}"
                     Text="{Binding Message}"
+                    Padding="0,0,0,20"
                     TextColor="Azure"
+                    HorizontalTextAlignment="Center"
                     FontSize="20"/>
             <Button Text="Ok"
                     CornerRadius="25"
-                    WidthRequest="80"
+                    WidthRequest="50"
                     HeightRequest="50"
                     Style="{StaticResource buttonStyle}"
                     Command="{Binding CloseDialogCommand}"/>        
