--- a/CoinViewTiki.iOS/Resources/LaunchScreen.storyboard
+++ b/CoinViewTiki.iOS/Resources/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="X5k-f2-b5h">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="X5k-f2-b5h">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238" />
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -9,31 +12,52 @@
             <objects>
                 <viewController id="X5k-f2-b5h" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Y8P-hJ-Z43" />
-                        <viewControllerLayoutGuide type="bottom" id="9ZL-r4-8FZ" />
+                        <viewControllerLayoutGuide type="top" id="Y8P-hJ-Z43"/>
+                        <viewControllerLayoutGuide type="bottom" id="9ZL-r4-8FZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yd7-JS-zBw">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600" />
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" />
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" image="Icon-60.png" translatesAutoresizingMaskIntoConstraints="NO" id="23">
-                                <rect key="frame" x="270" y="270" width="60" height="60" />
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0" />
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashBGIOS3.png" translatesAutoresizingMaskIntoConstraints="NO" id="Fuu-Af-vQT">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CoinViewTiki" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iiY-6I-VHJ">
+                                <rect key="frame" x="115" y="499" width="224" height="151"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="32"/>
+                                <color key="textColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CoinViewTiki_Logo_PNG.png" translatesAutoresizingMaskIntoConstraints="NO" id="1EC-6X-Tla">
+                                <rect key="frame" x="48" y="194" width="318" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="o0X-7r-Jso"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB" />
+                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="23" firstAttribute="centerY" secondItem="yd7-JS-zBw" secondAttribute="centerY" priority="1" id="39" />
-                            <constraint firstItem="23" firstAttribute="centerX" secondItem="yd7-JS-zBw" secondAttribute="centerX" priority="1" id="41" />
+                            <constraint firstItem="iiY-6I-VHJ" firstAttribute="leading" secondItem="yd7-JS-zBw" secondAttribute="leadingMargin" constant="95" id="1I5-vc-wXl"/>
+                            <constraint firstItem="1EC-6X-Tla" firstAttribute="leading" secondItem="yd7-JS-zBw" secondAttribute="leadingMargin" constant="28" id="AWZ-hL-Qkl"/>
+                            <constraint firstItem="Fuu-Af-vQT" firstAttribute="leading" secondItem="yd7-JS-zBw" secondAttribute="leading" id="BTQ-GM-Y1D"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iiY-6I-VHJ" secondAttribute="trailing" constant="55" id="JAp-yx-plj"/>
+                            <constraint firstItem="Fuu-Af-vQT" firstAttribute="top" secondItem="yd7-JS-zBw" secondAttribute="top" id="OXh-wy-pms"/>
+                            <constraint firstItem="9ZL-r4-8FZ" firstAttribute="top" secondItem="iiY-6I-VHJ" secondAttribute="bottom" constant="212" id="YyT-Sc-cnj"/>
+                            <constraint firstItem="1EC-6X-Tla" firstAttribute="top" secondItem="Y8P-hJ-Z43" secondAttribute="bottom" constant="150" id="eHy-FV-KBe"/>
+                            <constraint firstAttribute="trailing" secondItem="Fuu-Af-vQT" secondAttribute="trailing" id="gZY-A6-mPG"/>
+                            <constraint firstAttribute="bottom" secondItem="Fuu-Af-vQT" secondAttribute="bottom" id="oVl-s5-Mdf"/>
+                            <constraint firstItem="1EC-6X-Tla" firstAttribute="centerX" secondItem="yd7-JS-zBw" secondAttribute="centerX" id="xrI-1b-8yS"/>
+                            <constraint firstItem="iiY-6I-VHJ" firstAttribute="top" secondItem="1EC-6X-Tla" secondAttribute="bottom" constant="5" id="zuR-Es-ull"/>
                         </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XAI-xm-WK6" userLabel="First Responder" sceneMemberID="firstResponder" />
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XAI-xm-WK6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="349" y="339" />
+            <point key="canvasLocation" x="346.37681159420293" y="338.16964285714283"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Icon-60.png" width="180" height="180" />
+        <image name="CoinViewTiki_Logo_PNG.png" width="512" height="512"/>
+        <image name="splashBGIOS3.png" width="918.5" height="918.5"/>
     </resources>
 </document>
